force-app/main/default/objects/DailyTracker__c/DailyTracker__c.object-meta.xml
<CustomObject>
    <label>DailyTracker</label>
    <nameField>
        <label>DailyTracker Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>