force-app/main/default/objects/DailyTracker__c/fields/Actual_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Actual_Test_Cases__c</fullName>
    <label>Actual Test Cases</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>