force-app/main/default/objects/DailyTracker__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>