force-app/main/default/objects/DailyTracker__c/fields/TaskName__c.field-meta.xml
<CustomField>
    <fullName>TaskName__c</fullName>
    <label>TaskName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>